yml/invoice-api.yml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: invoice-api
  template:
    metadata:
      labels:
        app: invoice-api
    spec:
      containers:
      - name: invoice-api
        image: backend-image
        resources:
          requests:
            memory: '64Mi'
            cpu: '250m'
          limits:
            memory: '128Mi'
            cpu: '500m'
        ports:
        - containerPort: 8080
