yml/online-store-frontend.yml
# Web Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-store-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: online-store-frontend
  template:
    metadata:
      labels:
        app: online-store-frontend
    spec:
      containers:
      - name: online-store-frontend
        image: web-image
        resources:
          requests:
            memory: '64Mi'
            cpu: '250m'
          limits:
            memory: '128Mi'
            cpu: '500m'
        ports:
        - containerPort: 8080
