yml/store-db.yml
# Postgres Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-db
  template:
    metadata:
      labels:
        app: store-db
    spec:
      containers:
      - name: store-db
        image: postgres:latest
        resources:
          requests:
            memory: '500Mi'
            cpu: '500m'
          limits:
            memory: '1Gi'
            cpu: '1'
        ports:
        - containerPort: 5432
