yml/store-message-queue.yml
# RabbitMQ Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-message-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-message-queue
  template:
    metadata:
      labels:
        app: store-message-queue
    spec:
      containers:
      - name: store-message-queue
        image: rabbitmq:latest
        resources:
          requests:
            memory: '500Mi'
            cpu: '500m'
          limits:
            memory: '1Gi'
            cpu: '1'
        ports:
        - containerPort: 5672
