yml/online-store-service.yml
# Web Service
apiVersion: v1
kind: Service
metadata:
  name: online-store-service
spec:
  selector:
    app: online-store-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
