yml/payment-gateway-service.yml
# External Service
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-service
spec:
  selector:
    app: payment-gateway-integration
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
