yml/store-db-service.yml
# Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: store-db-service
spec:
  selector:
    app: store-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
