yml/store-frontend-ingress.yml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-frontend-ingress
spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: online-store-service
            port:
              number: 80
