yml/allow-frontend-to-invoice-api.yml
# Network Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-invoice-api
spec:
  podSelector:
    matchLabels:
      app: online-store-frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: invoice-api
