yml/allow-invoice-api-to-store-db.yml
# Network Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-invoice-api-to-store-db
spec:
  podSelector:
    matchLabels:
      app: invoice-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: store-db
