yml/allow-old-invoices-cleaner-to-store-db.yml
# Network Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-old-invoices-cleaner-to-store-db
spec:
  podSelector:
    matchLabels:
      app: old-invoices-cleaner
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: store-db
