yml/allow-payment-gateway-integration-to-invoice-api.yml
# Network Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-gateway-integration-to-invoice-api
spec:
  podSelector:
    matchLabels:
      app: payment-gateway-integration
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: invoice-api
