yml/allow-sales-data-processor-to-store-db.yml
# Network Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sales-data-processor-to-store-db
spec:
  podSelector:
    matchLabels:
      app: sales-data-processor
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: store-db
