yml/allow-store-message-queue-to-invoice-api.yml
# Network Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-store-message-queue-to-invoice-api
spec:
  podSelector:
    matchLabels:
      app: store-message-queue
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: invoice-api
